[metadata]
name = redcli
version = attr: redcli.__version__
author = zhouhao
author_email = zhouhao19931002@hotmail.com
maintainer = zhouhao
description = Simple Redis Client Tool
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7.1
install_requires =
    Pygments == 2.5.1
    prompt-toolkit == 3.0.1
    click == 7.0
    redis == 3.3.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    redcli = redcli.main:redcli

[tool:pytest]
testpaths = test
filterwarnings =
    error